# swevisualizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Tests/: CMakeLists.txt  NetCDFReaderTest.cpp  TestData.cdl  TestData.nc
resources/shaders/: test.fs  test.vs  vertex.vs
src/: CMakeLists.txt  main.cpp
src/mesh/: mesh.h  plane.cpp  plane.h
src/renderer/: camera.cpp  camera.h  shader.cpp  shader.h
src/simulation/: netcdf_reader.cpp  netcdf_reader.h  simulation.cpp  simulation.h
